# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "fractal-ImageXpress"
version = "0.0.1"
description = "Convert ImageXpress data to OME-ZARR, using the faim-hcs package."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Flurin Sturzenegger", email = "st.flurin@gmail.com" },
]

# Required Python version and dependencies
requires-python = ">=3.8"
dependencies = ["fractal-tasks-core"]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "pytest", "requests", "build", "jsonschema"]

# Build options (see https://peps.python.org/pep-0517)
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_imagexpress"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
